# clack

./: CMakeLists.txt  README.md  README2.md
catty/: CMakeLists.txt  catcute.cpp  catcute.hpp
cmake/: Doxy.cmake  FindSphinx.cmake  Sphinx.cmake  Utils.cmake  clack-config-version.cmake.in  clack-config.cmake.in
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst  index2.rst
include/clack/: clack.hpp  cli.hpp  config.hpp
tests/: CMakeLists.txt  cli_tests.cpp
